Revert "UI Update Index HTML and Style"
This reverts commit 09faac7db908f52bdcea8144a55004dbe4314cec.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
       <title>git pranto</title>
 </head>
 <body style="text-align: center;">
-      <h1 class="color-red">This is the website for gi</h1>
+      <h1>This is the website for gi</h1>
 </body>
 </html>
